--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*Navbar*/
 a img {
     width: 100px;
     height: 40px
@@ -8,18 +9,15 @@ a img {
     background-color: #454545 !important;
 }
 
+/*body bienvanida*/
+
 .img-banner {
     background-image: url("../src/ba1.jpg") !important;
     background-color: #cccccc;
-    /* Used if the image is unavailable */
     height: 500px;
-    /* You must set a specified height */
     background-position: center;
-    /* Center the image */
     background-repeat: no-repeat;
-    /* Do not repeat the image */
     background-size: cover;
-    /* Resize the background image to cover the entire container */
     display: grid;
 }
 
@@ -33,15 +31,30 @@ a img {
     color: white;
 }
 
+
+/* body seccion de oradores cards */
+
+
+div h2{
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: lighter;
+    margin: 10px 0 10px 0;
+} 
+
+div h3{
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
 .container-cards{
     display: flex;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0 100px 0 100px;
 }
 
 .card {
     width: 33%;
-    margin: 5px;
+    margin: 20px;
 }
 
 div p {
@@ -50,5 +63,11 @@ div p {
 
 .card img{
     width: auto;
-    height: 400px;
+    height: 300px;
 }
+
+/* body seccion de informacion de buenos aires */
+
+/* body formulario de convierte en orador */
+
+/* footer */
