--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ div h3{
 
 .card {
     width: 100%;
-    height: 600px;
+    height: auto;
     margin: 20px;
 }
 
@@ -142,3 +142,46 @@ p span{
 
 /* media queries*/
 
+@media (max-width: 600px){
+
+    html{
+        width: 100%;
+    }
+
+    body{
+        width: 100%;
+    }
+
+    nav{
+        width: 100%
+    }
+
+    .text-banner{
+        padding: 10%;
+        text-align: center;
+    }
+
+    .text-banner h1{
+        text-transform: uppercase;
+    }
+
+   .container-cards{
+    text-align:center;
+    display: flex;
+    flex-direction: column;
+    padding: 0 !important;
+   }
+
+   .card{
+    padding: 0 !important;
+    width:260px;
+    height: auto;
+   }
+
+    /*footer */
+
+    .footer-links{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
